[package]
name = "tokomi-value"
version = "0.1.0"
description = "OKLCh perceptual value analyzer for flat-value painting"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Smaller, faster release binary
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
